fix: 注册码记录按用户名展示，并修好手机端退出回登录
Co-authored-by: Cursor <cursoragent@cursor.com>